--- a/product-details.html
+++ b/product-details.html
@@ -141,8 +141,8 @@
 				<h3>Download Our App</h3>
 				<p>Download App for Android and ios mobile phone.</p>
 				<div class="app-logo">
-					<img src="play-store.png">
-					<img src="app-store.png">
+					<img src="./images/play-store.png">
+					<img src="./images/app-store.png">
 				</div>
 			</div>	
 			
