--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
 		<div class="small-container"> 
 			<div class="row">
 				<div class="col-5">
-					<img src="images/logo-philips.png">
+					<img src="./images/logo-philips.png">
 				</div>
 				<div class="col-5">
-					<img src="images/logo-paypal.png">
+					<img src="./images/logo-paypal.png">
 				</div>
 				<div class="col-5">
 					<img src="logo-oppo.png">
