--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@
 					<img src="./images/logo-paypal.png">
 				</div>
 				<div class="col-5">
-					<img src="./logo-oppo.png">
+					<img src="./images/logo-oppo.png">
 				</div>
 				<div class="col-5">
-					<img src="./logo-godrej.png">
+					<img src="./images/logo-godrej.png">
 				</div>
 				<div class="col-5">
-					<img src="./logo-coca-cola.png">
+					<img src="./images/logo-coca-cola.png">
 				</div>
 			</div>
 		</div>
