--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<div class="row"> 
 		<div class="col-4">
 			<a href="product-details.html"><img src="./images/product-1.jpg"></a>
-			<h4>Gray Headphone</h4>
+			<h4>Gray Sausage</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
@@ -77,7 +77,7 @@
 		</div> 
 		<div class="col-4">
 			<img src="./images/product-2.jpg"> 
-			<h4>Red Headphone</h4>
+			<h4>Red Hatdoggu</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
@@ -89,7 +89,7 @@
 		</div>
 		<div class="col-4">
 			<img src="./images/product-3.jpg"> 
-			<h4>Black X Division</h4>
+			<h4>Black X Hatdog</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
@@ -117,7 +117,7 @@
 	<div class="row"> 
 		<div class="col-4">
 			<img src="./images/product-5.jpg"> 
-			<h4>Classic White</h4>
+			<h4>Classic Doghot</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
@@ -153,7 +153,7 @@
 		</div>
 		<div class="col-4">
 			<img src="./images/product-8.jpg"> 
-			<h4>Green Matte Airpods X</h4>
+			<h4>Green Matte Hungarian X</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
@@ -167,7 +167,7 @@
 		<div class="row"> 
 		<div class="col-4">
 			<img src="./images/product-9.jpg"> 
-			<h4>Gray Headphone</h4>
+			<h4>Gray Sausage</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
@@ -179,7 +179,7 @@
 		</div> 
 		<div class="col-4">
 			<img src="./images/product-10.jpg"> 
-			<h4>Red Headphone</h4>
+			<h4>Red Hatdoggu</h4>
 			<div class="rating">
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
@@ -223,9 +223,9 @@
 				<img src="./assets/hatdog-2.jpg" class="offer-img"> 
 				</div> 
 				<div class="col-2">
-				<p>Exclusively Available on Etlog</p> 
+				<p>Exclusively Available on Hakdog</p> 
 				<h1>Hyper X5000</h1>
-				<small>The Hyper X5000 features Formerly called Orpheus, the flagship Hyper X5000 headphones come with their own valve amplification. Once commissioned by the customer, Sennheiser says each pair can be customised to become "as individual as its future owner".</small>
+				<small>Goods na Hatdog features Formerly called Orpheus, the flagship Hyper X5000 headphones come with their own valve amplification. Once commissioned by the customer, Sennheiser says each pair can be customised to become "as individual as its future owner".</small>
 				</div>
 			</div>
 		</div>
